<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />
        <!--android:icon="@drawable/info"-->
        <item
            android:id="@+id/nav_photos"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_guide" />

        <!--android:icon="@drawable/settinges"-->
        <item
            android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_setting" />

        <!--android:icon="@drawable/notification"-->
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_azan"
            android:icon="@drawable/mosque"
            android:title="@string/nav_azan" />

        <!--android:icon="@drawable/mosquelocation"-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/nav_mosque" />
    </group>

    <item android:title="گزینه های دیگر">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <!--<item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />-->
        </menu>
    </item>

</menu>