<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/font_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="#f1eded"
        android:text="@string/font_size"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dsb_max="30"
        app:dsb_min="15" />

    <TextView
        android:id="@+id/select_font_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="#f1eded"
        android:text="@string/select_font"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black" />


    <Button
        android:id="@+id/sabt_font_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/check_answer_bg"
        android:text="@string/sabt"
        android:textColor="@color/White"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"/>


</LinearLayout>