<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/moazen_txt"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/moazen"
        android:background="#f1eded"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/black"/>


    <LinearLayout
        android:id="@+id/linear_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/moazen_txt"
        android:gravity="right">

        <TextView
            android:id="@+id/moazen_dropdown_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_moazen"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"/>


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/quantum_ic_play_arrow_white_24"
            android:tint="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:rotation="90"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/shive_lny"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_ly"
        android:layout_marginEnd="8dp">


        <TextView
            android:id="@+id/shive_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruct"
            android:textColor="@android:color/black"
            android:background="#f1eded"/>

        <TextView
            android:id="@+id/calculate_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_oghat_sharei"
            android:textColor="@android:color/black"
            android:background="#f1eded"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>