<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_city_azan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.farzadfarshad.adeiye.Activity.CityAzanActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_other"/>


    <Spinner
        android:id="@+id/ostan_spn"
        android:layout_width="352dp"
        android:layout_height="38dp"
        android:layout_margin="32dp"
        android:hint="@string/choice_ostan"
        android:textColorHint="#05ab9a"
        tools:layout_editor_absoluteX="19dp"
        android:layout_marginTop="88dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <Spinner
        android:id="@+id/city_spn"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:clickable="false"
        android:hint="@string/choice_shahrestan"
        android:textColorHint="#05ab9a"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/ostan_spn" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city_spn"
        android:background="@drawable/check_answer_bg"
        android:text="@string/save"
        android:textColor="@color/White"
        android:layout_marginEnd="104dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="104dp"
        android:layout_marginTop="104dp"
        app:layout_constraintTop_toBottomOf="@+id/city_spn" />

    <include
        android:id="@+id/include_view"
        android:layout_width="357dp"
        android:layout_height="106dp"
        layout="@layout/oghat_sharei"
        tools:layout_editor_absoluteX="16dp"
        app:layout_constraintTop_toTopOf="@+id/save_btn"
        android:layout_marginTop="88dp"
        android:visibility="gone"/>



</android.support.constraint.ConstraintLayout>
